enable rhel 5 builds

--- a/.tito/releasers.conf
+++ b/.tito/releasers.conf
@@ -1,3 +1,7 @@
+[rhel5]
+releaser = tito.release.DistGitReleaser
+branches = eso-rhel-5
+
 [rhel6]
 releaser = tito.release.DistGitReleaser
 branches = eng-rhel-6
